# openkore-ai-v3

./: .gitignore  AI_SIDECAR_LAUNCHER.md  INSTALLATION_GUIDE.md  ai-sidecar-control.template.txt  ai-sidecar-launcher.env.example  ai-sidecar-policy.template.txt  restart-ai-openkore.ps1  restart-ai-openkore.sh  run_ai_sidecar.bat  run_ai_sidecar.sh  setup-ai-sidecar.ps1  setup-ai-sidecar.sh  start-ai-openkore.cmd  start-ai-openkore.ps1  start-ai-openkore.sh  status-ai-openkore.ps1  status-ai-openkore.sh  stop-ai-openkore.ps1  stop-ai-openkore.sh
AI_sidecar/: .env.example  README.md  pyproject.toml
AI_sidecar/ai_sidecar/: __init__.py  app.py  config.py  lifecycle.py  logging_setup.py
AI_sidecar/ai_sidecar/api/: __init__.py  deps.py
AI_sidecar/ai_sidecar/autonomy/: __init__.py  decision_service.py  goal_stack.py  (+6 more)
AI_sidecar/docs/: api-contracts.md  architecture.md  macro-workflow.md  observable-state-inventory.md  operations.md  persistence-memory.md
AI_sidecar/tests/: test_action_arbiter.py  test_autonomy_progress_pdca.py  test_autonomy_stage1_decision.py  test_cold_start_autonomy.py  test_control_domain.py  test_crewai.py  test_fleet_sync_runtime_behavior.py  test_fleet_v2.py  test_macro_compiler_event_conditions.py  test_ml_subconscious.py  test_observability_v2.py  test_plan_executor_fallback.py  test_planner_context_fleet.py  test_planner_workstream_c.py  test_provider_runtime_guards.py  test_reflex_layer.py  test_ro_knowledge.py  test_sidecar_operations_phase5c.py  test_workstream1_contract_hardening.py  test_workstream2_signal_state_completion.py
(+173 files in other folders)
