[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openkore-ai-sidecar"
version = "0.1.0"
description = "Local OpenKore AI sidecar service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.24.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "scikit-learn>=1.7.1",
  "crewai==1.14.2",
  "openmemory-py>=1.3.2",
]

[project.scripts]
openkore-ai-sidecar = "ai_sidecar.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_sidecar*"]
